Added ServerMode support